# ants-segmentator

./: README.md  ants.py  pyproject.toml  script.sh
inputs/: images-sources.txt
