[tool.poetry]
name = "ants-segmentator"
version = "0.1.0"
description = "Complementary segmentator based on https://doi.org/10.1109/iecon.2009.5415195"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
tqdm = "^4.67.0"
numpy = "<2.1"
opencv-python = "^4.10.0.84"
numba = "^0.60.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
